--- a/css/template.css
+++ b/css/template.css
@@ -1,9 +1,6 @@
 @charset "utf-8";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css");
 
-/*body {
-    background: url('../images/background.jpg') no-repeat;
-}*/
 
 /* Анимированный фо по желанию */
 html, body {
@@ -57,8 +54,12 @@ header {
 }
 
 .headcol {
-    text-align: center;
+    /*text-align: center;*/
     padding-top: 1em;
+}
+
+.headcol .col-4 {
+    text-align: center;
 }
 
 .headcol a {
