--- a/css/template.css
+++ b/css/template.css
@@ -54,12 +54,15 @@ header {
 }
 
 .headcol {
-    /*text-align: center;*/
     padding-top: 1em;
 }
 
 .headcol .col-4 {
     text-align: center;
+}
+
+.align-block {
+    display: inline-block;
 }
 
 .headcol a {
@@ -105,7 +108,7 @@ header {
 
 /* Поиск */
 #search {
-    margin-top: 15%;
+    margin-top: 13%;
 }
 
 .form-control {
@@ -113,14 +116,26 @@ header {
     color: #ccc;
 }
 
+/* Responsive styles */
+@media (max-width: 1399.98px) {
+    #search {
+        margin-top: 7%;
+    }
+}
+
 @media (max-width: 767.98px) {
     .col-8 {
         width: 100%;
     }
 }
+
 @media (max-width: 575.98px) {
     .col-8, .col-3 {
         width: 100%;
+    }
+
+    .head-link-text {
+        white-space: nowrap;
     }
 
     #search {
