--- a/css/template.css
+++ b/css/template.css
@@ -70,7 +70,7 @@ header {
 }
 
 .head-link-text {
-    display: block;
+    display: inline-block;
     padding-top: 15px;
     font-size: 1.5em;
 }
