--- a/css/template.css
+++ b/css/template.css
@@ -1,6 +1,4 @@
 @charset "utf-8";
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css");
-
 
 /* Анимированный фо по желанию */
 html, body {
@@ -90,6 +88,10 @@ header {
     margin-top: 1em;
 }
 
+/*.block {
+    min-height: 100px;
+}*/
+
 /*Цвет для кнопок*/
 .btn-primary {
     background-color: #2A7FD8; /* Для background с картинкой цвет #df7366 */
@@ -117,6 +119,12 @@ header {
 }
 
 /* Responsive styles */
+@media (min-width: 1200px) {
+    .block {
+        min-height: 100px;
+    }
+}
+
 @media (max-width: 1399.98px) {
     #search {
         margin-top: 7%;
